# hzgr_trae_project_hub

./: .gitignore  README.md
aiagent/: pyproject.toml
aiagent/src/: aiagent.py  aiagent_modular.py  config.py  main.py
aiagent/src/pages/: __init__.py  agent_creation_page.py  login_page.py  qiaocang_page.py
bdqn_word/: pyproject.toml
bdqn_word/src/: main.py  replace_word_new.py
datebase_tool/: hello.py  pyproject.toml  test_datebase.py
datebase_tool/src/: __init__.py  datebase.py  models.py
jh_report/: bulid.py  hello.py  pyproject.toml
jh_report/src/jh_report/: get_json.py  main.py
keyword_classfiy/: pyproject.toml  requirements.min.txt  requirements.txt  分词规则.txt
keyword_classfiy/data/: classification_results.xlsx
keyword_classfiy/src/: excel_handler.py  keyword_classifier.py  main.py  test_classifier.py
keyword_classfiy_new/: AB75E240  bash.exe.stackdump  generate_version.py  pyproject.toml
keyword_classfiy_new/keyword_classifier/: excel_handler.py
keyword_classfiy_new/src/: excel_handler.py  keyword_classifier.py  main.py  test_classifier.py  workflow_processor.py  workflow_ui.py
keyword_classfiy_new/test/: pdf_to_img.py  test_keyword_classifier.py
keyword_classifier_by_workflow/: README.md  pyproject.toml  问题分析与调优建议.md
keyword_classifier_by_workflow/src/kw_cf/: excel_handler.py  keyword_classifier.py  logger_config.py  main.py  models.py  workflow_processor.py
keyword_classifier_by_workflow/test/: temp.py  test.py
tanglang_sdk/: hello.py  pyproject.toml
tanglang_sdk/src/tl_sdk/: client.py
tanglang_sdk/test/: test.py
(+1 files in other folders)
